--- a/index.html
+++ b/index.html
@@ -1,124 +1,119 @@
 <!doctype html>
-<html>
+<html lang="en">
 
 <head>
-	<title>Javascript Hangman Game</title>
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-		integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-	<link rel="stylesheet" type="text/css" href="assets/css/styles.css">
+    <title>Word Guess Game</title>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="assets/css/styles.css">
 </head>
 
 <body>
-	<div class="container">
-		<div class="row">
-			<div class="col">
-				<h1>Let's Play!</h1>
-			</div>
-		</div>
-		<div class="row">
-			<div class="col">
-				<h2>The Rules</h2>
-				<p>You will guess a letter each turn. Correct guesses will be
-					filled in the diagram, in the position for that letter. In the case where
-					there are more than one of that letter, only one will be placed at a time.
-					It is up to you to decide whatever.</p>
-				<p>So, let's get started.</p>
-				<script>
-					// start by creating a word to guess
-					let words = ["dermatoglyphics", "publisher", "random", "amusing", "ovulate", "posit", "matrix", "purge", "gradient"];
+    <div id="container">
+        <div class="jumbotron jumbotron-fluid">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12">
+                        <h1 class="display-3">Bill's Super Duper Word Guess Game</h1>
+                        <p class="lead">Ready to Play?</p>
+                    </div>
+                </div>
+                <hr class="my-2">
+                <div class="row">
+                    <div class="col-6">
+                        <h3>The Rules</h3>
+                        <p>You will start out with 10 guesses. Enter letters one at a time, by
+                            typing your guess. Each correct guess will automatically show up in
+                            blank spaces. Incorrect letters will appear in the wrong guesses
+                            section. If, at the end of a round, you have all the blanks filled, you
+                            win. If not, then you lose.
+                        </p>
+                        <p class="lead">
+                            <a class="btn btn-primary btn-lg" href="#" role="button">Press any letter key to start!</a>
+                        </p>
+                    </div>
+                    <div class="col-6">
+                    <div class="card border-primary">
+                        <img class="card-img-top" src="holder.js/100px180/" alt="">
+                        <div class="card-body">
+                            <h4 class="word-guess">Word to Guess:</h4>
+                            <p class="card-text"></p>
+                            <div class="card border-secondary">
+                                <img class="card-img-top" src="holder.js/100px180/" alt="">
+                                <div class="card-body">
+                                    <h4 id="spaces"></h4>
+                                    <p class="card-text"></p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            
+            <!-- <div class="card border-primary">
+            <img class="card-img-top" src="holder.js/100px180/" alt="">
+            <div class="card-body">
+                <h4 id="spaces"></h4>
+                <p class="card-text"></p>
+            </div> -->
+        </div>
+        <div class="row">
+            <div class="col-6">
+                <div class="card border-primary">
+                    <img class="card-img-top" src="holder.js/100px180/" alt="">
+                    <div class="card-body">
+                        <h4 id="wrong"></h4>
+                        <p class="card-text"></p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-6">
+                <div class="card border-primary">
+                    <img class="card-img-top" src="holder.js/100px180/" alt="">
+                    <div class="card-body">
+                        <h4 id="remaining"></h4>
+                        <p class="card-text"></p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-6">
+                <div class="card border-primary">
+                    <img class="card-img-top" src="holder.js/100px180/" alt="">
+                    <div class="card-body">
+                        <h4 id="wins"></h4>
+                        <p class="card-text"></p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-6">
+                <div class="card border-primary">
+                    <img class="card-img-top" src="holder.js/100px180/" alt="">
+                    <div class="card-body">
+                        <h4 id="losses"></h4>
+                        <p class="card-text"></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
-					// randomly pick a word
-					var word = words[Math.floor(Math.random() * words.length)];
-					console.log(word);
-
-					// split the word into individual letters
-					let arr = word.split("");
-
-					// print the letters as a check that we're good so far
-					console.log(arr);
-
-					// store player's name in name
-					let name = prompt("What is your name?");
-
-					// Welcome them to the game
-					alert("Hello " + name + ". Good Luck!");
-
-					// let player know how many letters there are
-					alert("This word has " + arr.length + " letters, with none repeating!");
-
-					// create an array to store guesses
-					let answerArray = [];
-					for (var i = 0; i < word.length; i++) {
-						answerArray[i] = "_";
-
-					}
-
-					// show spaces for word
-					alert(answerArray.join(" "));
-
-					// set letters remaining to current word length
-					var lettersRemaining = word.length;
-					console.log(answerArray);
-					console.log(lettersRemaining);
-
-
-					// prompt for their guess
-					var guess = prompt("Guess a letter, or click Cancel to stop playing.");
-					if (guess === null) {
-
-						prompt("Do you want to quit?");
-
-					}
-					else if (guess.length !== 1) {
-
-						alert("Please enter a single letter.");
-					}
-
-					else {
-						for (var j = 0; j < word.length; j++) {
-							if (word[j] === guess) {
-								answerArray[j] = guess;
-								lettersRemaining--;
-							}
-						}
-					};
-
-				
-					// a while loop to keep track of letters left
-					while (lettersRemaining > 0) {
-						//do something
-					}
-
-					// alert(answerArray.join(" "));
-					// alert("Good job! The answer was " + word);
-
-				</script>
-			</div>
-		</div>
-		<div class="row">
-			<div class="col" id="word">
-			</div>
-
-			<div class="col" id="spaces"></div>
-
-			<script>
-				// tell player how many spaces are in  the word
-				var element = document.getElementById("word");
-				element.innerHTML = "This word has " + arr.length + " letters, with none repeating!";
-
-				// // create the spaces
-				var spaces = document.getElementById("spaces");
-				spaces.innerHTML = answerArray;
-
-			</script>
-
-		</div>
-		<div class="row">
-			<div class="col">
-			</div>
-		</div>
-	</div>
-
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
+    <script src="assets/javascript/game.js"></script>
 </body>
 
 </html>
