--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 </div>
                 <hr class="my-2">
                 <div class="row">
-                    <div class="col-6">
+                    <div class="col-4">
                         <h3>The Rules</h3>
                         <p>You will start out with 10 guesses. Enter letters one at a time, by
                             typing your guess. Each correct guess will automatically show up in
@@ -37,7 +37,7 @@
                             <a class="btn btn-primary btn-lg" href="#" role="button">Press any letter key to start!</a>
                         </p>
                     </div>
-                    <div class="col-6">
+                    <div class="col-8">
                     <div class="card border-primary">
                         <img class="card-img-top" src="holder.js/100px180/" alt="">
                         <div class="card-body">
@@ -63,7 +63,7 @@
             </div> -->
         </div>
         <div class="row">
-            <div class="col-6">
+            <div class="col-5 wrong">
                 <div class="card border-primary">
                     <img class="card-img-top" src="holder.js/100px180/" alt="">
                     <div class="card-body">
@@ -72,7 +72,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-6">
+            <div class="col-3 remaining">
                 <div class="card border-primary">
                     <img class="card-img-top" src="holder.js/100px180/" alt="">
                     <div class="card-body">
@@ -81,7 +81,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-6">
+            <div class="col-2 wins">
                 <div class="card border-primary">
                     <img class="card-img-top" src="holder.js/100px180/" alt="">
                     <div class="card-body">
@@ -90,7 +90,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-6">
+            <div class="col-2 losses">
                 <div class="card border-primary">
                     <img class="card-img-top" src="holder.js/100px180/" alt="">
                     <div class="card-body">
