added some audio

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12">
-                        <h1 class="display-3">Bill's Super Duper Word Guess Game</h1>
+                        <h1 class="display-3">Bill's Doggone Good Word Guess</h1>
                         <p class="lead">Ready to Play?</p>
                     </div>
                 </div>
@@ -38,82 +38,82 @@
                         </p>
                     </div>
                     <div class="col-8">
-                    <div class="card border-primary">
-                        <img class="card-img-top" src="holder.js/100px180/" alt="">
-                        <div class="card-body">
-                            <h4 class="word-guess">Word to Guess:</h4>
-                            <p class="card-text"></p>
-                            <div class="card border-secondary">
-                                <img class="card-img-top" src="holder.js/100px180/" alt="">
-                                <div class="card-body">
-                                    <h4 id="spaces"></h4>
-                                    <p class="card-text"></p>
+                        <div class="card border-primary">
+                            <img class="card-img-top" src="holder.js/100px180/" alt="">
+                            <div class="card-body">
+                                <h4 class="word-guess">Word to Guess:</h4>
+                                <p class="card-text"></p>
+                                <div class="card border-secondary">
+                                    <img class="card-img-top" src="holder.js/100px180/" alt="">
+                                    <div class="card-body">
+                                        <h4 id="spaces"></h4>
+                                        <p class="card-text"></p>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>
-            
-            <!-- <div class="card border-primary">
+
+                <!-- <div class="card border-primary">
             <img class="card-img-top" src="holder.js/100px180/" alt="">
             <div class="card-body">
                 <h4 id="spaces"></h4>
                 <p class="card-text"></p>
             </div> -->
-        </div>
-        <div class="row">
-            <div class="col-5 wrong">
-                <div class="card border-primary">
-                    <img class="card-img-top" src="holder.js/100px180/" alt="">
-                    <div class="card-body">
-                        <h4 id="wrong"></h4>
-                        <p class="card-text"></p>
+                <!-- </div> -->
+                <div class="row">
+                    <div class="col-4 wrong">
+                        <div class="card border-primary">
+                            <img class="card-img-top" src="holder.js/100px180/" alt="">
+                            <div class="card-body">
+                                <h4 id="wrong"></h4>
+                                <p class="card-text"></p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-4 remaining">
+                        <div class="card border-primary">
+                            <img class="card-img-top" src="holder.js/100px180/" alt="">
+                            <div class="card-body">
+                                <h4 id="remaining"></h4>
+                                <p class="card-text"></p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-2 wins">
+                        <div class="card border-primary">
+                            <img class="card-img-top" src="holder.js/100px180/" alt="">
+                            <div class="card-body">
+                                <h4 id="wins"></h4>
+                                <p class="card-text"></p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-2 losses">
+                        <div class="card border-primary">
+                            <img class="card-img-top" src="holder.js/100px180/" alt="">
+                            <div class="card-body">
+                                <h4 id="losses"></h4>
+                                <p class="card-text"></p>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class="col-3 remaining">
-                <div class="card border-primary">
-                    <img class="card-img-top" src="holder.js/100px180/" alt="">
-                    <div class="card-body">
-                        <h4 id="remaining"></h4>
-                        <p class="card-text"></p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-2 wins">
-                <div class="card border-primary">
-                    <img class="card-img-top" src="holder.js/100px180/" alt="">
-                    <div class="card-body">
-                        <h4 id="wins"></h4>
-                        <p class="card-text"></p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-2 losses">
-                <div class="card border-primary">
-                    <img class="card-img-top" src="holder.js/100px180/" alt="">
-                    <div class="card-body">
-                        <h4 id="losses"></h4>
-                        <p class="card-text"></p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-        crossorigin="anonymous"></script>
-    <script src="assets/javascript/game.js"></script>
+            <!-- Optional JavaScript -->
+            <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+            <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+                integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+                crossorigin="anonymous"></script>
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+                integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+                crossorigin="anonymous"></script>
+            <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+                integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+                crossorigin="anonymous"></script>
+            <script src="assets/javascript/game.js"></script>
 </body>
 
 </html>
