having display issues on github

--- a/index.html
+++ b/index.html
@@ -46,13 +46,13 @@
                             unless you get really lucky.</p>
 
                         <div class="card border-primary">
-                            <img class="card-img-top" src="holder.js/100px180/" alt="">
+                            <!-- <img class="card-img-top" src="holder.js/100px180/" alt=""> -->
                             <div class="card-body">
 
                                 <h4 class="word-guess" id="hint">The Dog Breed Is:</h4>
                                 <p class="card-text"></p>
                                 <div class="card border-secondary">
-                                    <img class="card-img-top" src="holder.js/100px180/" alt="">
+                                    <!-- <img class="card-img-top" src="holder.js/100px180/" alt=""> -->
                                     <div class="card-body">
                                         <h4 id="spaces"></h4>
                                         <p class="card-text"></p>
@@ -73,7 +73,7 @@
                 <div class="row guesses">
                     <div class="col-4 wrong">
                         <div class="card border-primary">
-                            <img class="card-img-top" src="holder.js/100px180/" alt="">
+                            <!-- <img class="card-img-top" src="holder.js/100px180/" alt=""> -->
                             <div class="card-body">
                                 <h4 id="wrong"></h4>
                                 <p class="card-text"></p>
@@ -82,7 +82,7 @@
                     </div>
                     <div class="col-4 remaining">
                         <div class="card border-primary">
-                            <img class="card-img-top" src="holder.js/100px180/" alt="">
+                            <!-- <img class="card-img-top" src="holder.js/100px180/" alt=""> -->
                             <div class="card-body">
                                 <h4 id="remaining"></h4>
                                 <p class="card-text"></p>
@@ -91,7 +91,7 @@
                     </div>
                     <div class="col-2 wins">
                         <div class="card border-primary">
-                            <img class="card-img-top" src="holder.js/100px180/" alt="">
+                            <!-- <img class="card-img-top" src="holder.js/100px180/" alt=""> -->
                             <div class="card-body">
                                 <h4 id="wins"></h4>
                                 <p class="card-text"></p>
@@ -100,7 +100,7 @@
                     </div>
                     <div class="col-2 losses">
                         <div class="card border-primary">
-                            <img class="card-img-top" src="holder.js/100px180/" alt="">
+                            <!-- <img class="card-img-top" src="holder.js/100px180/" alt=""> -->
                             <div class="card-body">
                                 <h4 id="losses"></h4>
                                 <p class="card-text"></p>
