--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<!-- https://youtu.be/aoQ6S1a32j8?t=2622 -->
+
 
 <head>
     <meta charset="UTF-8" />
@@ -17,6 +17,7 @@
 
 <body>
     <header class="header">
+        <div class="overlay"></div>
         <nav class="flex flex-jc-sb flex-ai-c">
             <a href="/" class="header__logo">
                 <img src="/images/pawprint.png" alt="dog pawprint" />
