--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="overlay"></div>
         <nav class="flex flex-jc-sb flex-ai-c">
             <a href="/" class="header__logo">
-                <img src="/images/pawprint.png" alt="dog pawprint" />
+                <img src="./images/pawprint.png" alt="dog pawprint" />
             </a>
             <h1>Guess the Breed Game</h1>
             <a id="btnHamburger" href="#" class="header__menu hide-for-desktop">
