--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI=" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Public+Sans:wght@100;400;700&display=swap" rel="stylesheet" />
 
-    <link rel="stylesheet" href="/app/dist/style.css" />
+    <link rel="stylesheet" href="/dist/style.css" />
 
 </head>
 
