fix css reference

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <link rel="stylesheet" href="./dist/css/style.css" />
 
- </head>
+</head>
 
 <body>
     <header class="header">
@@ -71,7 +71,7 @@
             <a href="/s/photos/dogs?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
         </p>
     </footer>
-    <script src="/app/js/script.js"></script>
+    <script src="./app/js/script.js"></script>
 </body>
 
 </html>
